change to api version 1.1.0
