# go/model_message.go
@@ -3,7 +3,7 @@
  *
  * No description provided (generated by Openapi Generator https://github.com/openapitools/openapi-generator)
  *
- * API version: 1.0.0
+ * API version: 1.1.0
  * Generated by: OpenAPI Generator (https://openapi-generator.tech)
  */
 
@@ -17,11 +17,9 @@ type Message struct {
 
 	ChatId string `json:"chatId,omitempty"`
 
-	Content string `json:"content,omitempty"`
+	EncryptedContent string `json:"encryptedContent,omitempty"`
 
 	Timestamp string `json:"timestamp,omitempty"`
 
 	Status string `json:"status,omitempty"`
-
-	Attachments []Attachment `json:"attachments,omitempty"`
 }
